# book-llm-from-scratch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 3-2-tokenizer.md  用語集.md
docs/chapter02/: 2_1_Transformerの概要.md  2_2_アテンション機構.md  2_3_アテンション以外の部品.md  2_4_Transformerを作る.md  2_5_Transformerの学習と推論.md
docs/chapter03/: 3_1_GPTモデルの概要.md  3_2_Tokenizerと入力処理.md  3_3_GPTモデルの学習.md  3_4_他のLLMの紹介.md
docs/chapter04/: 4_1_データセットと前処理.md  4_1_大規模言語モデルの学習.md  4_2_学習の大規模化.md  4_3_事前学習.md  4_3_分散学習による事前学習.md  4_4_学習の効率化（LoRA）.md
docs/chapter05/: 5_1_アライメントとは.md  5_2_インストラクションチューニング.md  5_3_ 人間のフィードバックによる学習.md  5_3_強化学習の手法(RLHF)を用いた学習.md  5_4_評価.md
docs/chapter06/: 6_1_推論強化モデル.md
examples/: train_gpt.py  train_gpt_shakespeare.py  train_gpt_soseki.py
llm_from_scratch/gpt/: __init__.py  dataset.py  model.py  tokenizer.py  trainer.py
llm_from_scratch/transformer/: attention.py  decoder_only.py  gpt2_decoder.py  transformer.py  utils.py
notebooks/appendix/: numpy_pytorch_introduction.ipynb
notebooks/chapter02/: attention.ipynb  attention_scaling.ipynb  layer_normalization.ipynb  positional_encoding.ipynb  section2.ipynb  section3.ipynb  section4.ipynb  section5.ipynb  section_2_2.ipynb  section_2_3.ipynb  train_transformer.ipynb
notebooks/chapter03/: section03_tokenizer.py  train_gpt_soseki.ipynb
notebooks/chapter04/: data_parallel.py  data_preparation.ipynb  ds_config.json  section01_dataset_preprocessing.ipynb  section02_ZeRO.py  section02_data_parallel.py  section02_tensor_parallel.py  section03_pretrain_gpt2_aozora.ipynb  section03_train_gpt2.py  section04_lora.ipynb  section04_train_lora.py  section2.ipynb  section3.ipynb  train_base.yaml  train_deepspeed.py  utils.py
notebooks/chapter05/: section2.ipynb  section3.ipynb
refs/: errors.md
校正_markdown/DaikiboGengomodel_000_0hajimeni_1/: DaikiboGengomodel_000_0hajimeni_1.md  DaikiboGengomodel_000_0hajimeni_1_meta.json
校正_markdown/DaikiboGengomodel_000_1syou_2/: DaikiboGengomodel_000_1syou_2.md  (+1 more)
(+38 files in other folders)
