[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = ["aRySt0cat <ryuta.academic@gmail.com>"]
readme = "README.md"
packages = [
    { include = "llm_from_scratch", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
notebook = "^7.0.6"
torch = "^2.1.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
japanize-matplotlib = "^1.1.3"
torchtext = "^0.17.0"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"
scipy = "^1.13.0"
datasets = "^2.20.0"
omegaconf = "^2.3.0"
transformers = "^4.42.3"
langchain = "^0.2.7"
spacy = "^3.7.5"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
