[project]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "aRySt0cat", email = "ryuta.academic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"

dependencies = [
    "notebook>=7.0.6",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "japanize-matplotlib>=1.1.3",
    "tqdm>=4.64.0",
    "ipywidgets>=8.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []