[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learn and implement LLMs from scratch"
authors = [
    {name = "aRySt0cat", email = "ryuta.academic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "torch>=2.1.1",
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "japanize-matplotlib>=1.1.3",
    "tqdm>=4.66.2",
    "ipywidgets>=8.1.2",
    "scipy>=1.13.0",
    "tensorboard>=2.12.0",
    "notebook>=7.0.6",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]